# MedianXLOfflineTools

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MedianXLOfflineTools.pro  MedianXLOfflineTools.sln  MedianXLOfflineTools.vcxproj  MedianXLOfflineTools.vcxproj.filters  README.md  TODO.txt  allstatsdialog.cpp  allstatsdialog.ui  app.pri  application.cpp  application.h  application_mac.mm  application_win.cpp  characterinfo.hpp  checkboxsortfilterproxymodel.hpp  colors.hpp  colorsmanager.hpp  dc6con.c  dc6con.h  disenchantpreviewdialog.cpp  disenchantpreviewdialog.h  disenchantpreviewmodel.cpp  disenchantpreviewmodel.h  dupescan.pro  dupescandialog.cpp  dupescandialog.h  enums.cpp  enums.h  experienceindicatorgroupbox.cpp  experienceindicatorgroupbox.h  fileassociationmanager.h  fileassociationmanager_mac.cpp  fileassociationmanager_mac.mm  fileassociationmanager_win.cpp  (+87 more)
KExpandableGroupBox/: kexpandablegroupbox.cpp  kexpandablegroupbox.h
MedianXLOfflineTools.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
MedianXLOfflineTools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Resources/: 2012 005.7z  medianxlofflinetools.qrc  ultimative.7z
Resources/data/: exptable.txt  mo.txt  signet_of_learning.d2i  sort_order.txt  sort_order_sets.txt  version.txt
Resources/data/en/: items.txt  mercs.txt  monsters.txt  props.txt  rw.txt  sets.txt  skills.txt  socketables.txt  uniques.txt
Resources/data/images/: apple.dc6  bird4.dc6  book02.dc6  book03.dc6  catal1.dc6  catal2.dc6  catal3.dc6  cherries.dc6  evileye.dc6  gemcontainer.dc6  hardmode.dc6  invgsaa.dc6  invgsab.dc6  invgsac.dc6  invgsad.dc6  invgsae.dc6  invgsca.dc6  invgscb.dc6  invgscc.dc6  invgscd.dc6  invgsce.dc6  invgsoa.dc6  invgsob.dc6  invgsoc.dc6  invgsod.dc6  invgsoe.dc6  invgsta.dc6  invgstb.dc6  invgstc.dc6  invgstd.dc6  invgste.dc6  invhscr2.dc6  invsbk2.dc6  invscb2.dc6  jbscross.dc6  littleheart.dc6  moon1.dc6  og1.dc6  og2.dc6  og3.dc6  (+64 more)
Resources/data/items/: arcane_crystal.d2i  cube.d2i  signet_of_learning.d2i
Resources/data/ru/: items.txt  mercs.txt  monsters.txt  props.txt  rw.txt  skills.txt  socketables.txt  uniques.txt
Resources/data/sorting/: gear.txt  misc.txt  sets.txt  thng_list.txt
Resources/mac/: Info.plist  icon.icns  locversion.plist
Resources/translations/: medianxlofflinetools.ts  medianxlofflinetools_ru.qm  medianxlofflinetools_ru.ts
Resources/win/: MedianXLOfflineTools.rc  resource.h
d2 docs/: COF, D2, DC6, DS1, DT1, TBL File format.html
d2 docs/1.09/: Diablo II v1.09 (English) Mercenary Names.htm  Diablo II v1.09 Character Skills.htm  Diablo II v1.09 File Format.htm  Diablo II v1.09 Item Format.htm  Diablo II v1.09 Magic Properties.htm  Diablo II v1.09 Magical Enhancement Names.htm
d2 docs/1.10/: D2S File Format.html  Ear Info format.html  Extended Item Info format.html  Extended Item Type Specific Info format.html  Item Info format.html  Item Structure format.html
d2 docs/txt guides/: Armor.txt.html  Cubemain.txt.html  ItemStatCost.txt.html  ItemTypes.txt.html  Misc.txt.html  New Magical Modifiers (by Drackin).html  Properties.txt.html  QualityItems.txt.html  SetItems.txt.htm  Sets.txt.htm  SkillDesc.txt.html  Skills.txt.htm  Weapons.txt.html
forum threads text/: en.txt  ru.txt
qjson-backport/: qjson-backport.pro
qtmacextras/: qmacextrasglobal.h  qmacfunctions.h  qmacfunctions.mm  qmacfunctions_mac.mm  qmacfunctions_p.h
qtsingleapplication/: CMakeLists.txt  qtlockedfile.h  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h
resources/: medianxlofflinetools.qrc
resources/data/items/: moon_symbol.d2i
resources/data/sorting/: gear.txt  misc.txt  sets.txt  thng_list.txt
resources/items/: arcane_shard.d2i  shrine.d2i
resources/items/gems/: gema2.d2i  gemd1.d2i  gemd2.d2i  gemd3.d2i  gemd4.d2i  geme1.d2i  geme2.d2i  geme3.d2i  geml2.d2i  gemo1.d2i  gemo2.d2i  gemo3.d2i  gemo4.d2i  (+18 more)
resources/mac/: Info.plist  disable_auto_load.command
resources/translations/: medianxlofflinetools.ts  medianxlofflinetools_ru.qm  medianxlofflinetools_ru.ts
resources/win/: MedianXLOfflineTools.rc  disable_auto_load.reg
scripts/: compare_image_dirs.pl  copy_tbls.command  dc6_transparentPng.sh  distribute_mod_data.sh  items_fetch.command  lupdate_noobsolete.bat  lupdate_noobsolete.sh  release_mac.sh  release_win.ps1  set_new_app_version.pl  set_new_app_version.sh  skill_icons.pl  skills_fetch.command  xcode_project.sh
src/: CMakeLists.txt  allstatsdialog.cpp  allstatsdialog.h  application.cpp  application.h  application_mac.mm  characterinfo.hpp  colorsmanager.cpp  colorsmanager.h  colorsmanager.hpp  disenchantpreviewmodel.cpp  enums.cpp  enums.h  fileassociationmanager.h  fileassociationmanager_mac.mm  fileassociationmanager_win.cpp  finditemsdialog.cpp  finditemsdialog.h  finditemsdialog.ui  findresultswidget.cpp  helpers.cpp  helpers.h  helpwindowdisplaymanager.cpp  helpwindowdisplaymanager.h  itemdatabase.cpp  itemdatabase.h  itemnamestreewidget.hpp  itemparser.cpp  itemparser.h  itemspropertiessplitter.cpp  itemspropertiessplitter.h  itemstoragetablemodel.cpp  itemstoragetablemodel.h  itemsviewerdialog.cpp  itemsviewerdialog.h  jsonwriter.cpp  jsonwriter.h  kexpandablegroupbox.cpp  kexpandablegroupbox.h  machelpers.mm  (+27 more)
utils/: instructions.txt
utils/CompressFiles/: CompressFiles.pro  main.cpp
utils/txt_parser/: create_translation.bat  create_translation.sh  generated_2012 005 + KL + TvsA.7z  generated_ultimative6d.7z  generated_ultimative7.7z  generated_ultimativeX.7z  generated_ultimativeXIII.7z  generated_ultimativeXIVb.7z  parse_and_cp.bat  parse_and_cp.command  parse_and_cp.sh  tbl_2012 005 + KL + TvsA.7z  tbl_ultimative4.7z  tbl_ultimative5b.7z  tbl_ultimative6.7z  tbl_ultimative6b.7z  tbl_ultimative6d.7z  tbl_ultimative7.7z  tbl_ultimativeX.7z  tbl_ultimativeXIII.7z  tbl_ultimativeXIVb.7z  tbl_ultimativeXVc.7z  txt_2012 005 + KL + TvsA.7z  txt_ultimative7.7z  txt_ultimativeX.7z  txt_ultimativeXIII.7z  txt_ultimativeXIVb.7z  txt_ultimativeXVc.7z  txtparser.pl  txts used.txt
(+135 files in other folders)
